# ant-client

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PERF-RESULTS.md  README.md  UPSTREAM-PR-self-encryption.md  install.ps1  install.sh
.claude/commands/: e2e-node-management-test.md
.claude/skills/e2e-node-management-test/: SKILL.md
.claude/skills/update-ant-node-ref/: SKILL.md
.github/workflows/: ant-cli-release.yml  ant-core-release.yml  ci.yml  install-test.yml
ant-cli/: Cargo.toml
ant-cli/src/: cli.rs  main.rs  progress.rs
ant-cli/src/commands/: mod.rs  update.rs
ant-cli/src/commands/data/: chunk.rs  file.rs  mod.rs  wallet.rs
ant-cli/src/commands/node/: add.rs  daemon.rs  mod.rs  reset.rs  start.rs  status.rs  stop.rs
ant-core/: CHANGELOG.md  Cargo.toml
ant-core/examples/: bench-quoting.rs  start-devnet-sepolia.rs  start-local-devnet.rs
ant-core/src/: config.rs  datamap_file.rs  error.rs  lib.rs  update.rs
ant-core/src/data/: devnet.rs  error.rs  mod.rs  network.rs
ant-core/src/data/client/: adaptive.rs  batch.rs  cache.rs  chunk.rs  data.rs  file.rs  merkle.rs  mod.rs  payment.rs  peer_cache.rs  quote.rs
ant-core/src/node/: binary.rs  devnet.rs  events.rs  mod.rs  registry.rs  types.rs
ant-core/src/node/daemon/: client.rs  server.rs  supervisor.rs
ant-core/src/node/process/: spawn.rs
ant-core/tests/: daemon_integration.rs  datamap_file.rs  e2e_bootstrap_cache.rs  e2e_chunk.rs  e2e_close_group_quorum.rs  e2e_cost_estimate.rs  e2e_data.rs  e2e_file.rs  e2e_huge_file.rs  e2e_merkle.rs  e2e_payment.rs  e2e_security.rs  e2e_transport_teardown.rs  e2e_upload_costs.rs  merkle_unit.rs  node_add_integration.rs  unit_self_encrypt.rs
ant-core/tests/support/: mod.rs
docs/: data-storage-architecture.md  node-management-architecture.md
resources/: bootstrap_peers.toml  release-signing-key.pub
resources/winget/: Autonomi.ant.yaml  update-winget.ps1
