[package]
name = "ant-cli"
version = "0.1.2-rc.14"
edition = "2021"

[[bin]]
name = "ant"
path = "src/main.rs"

[dependencies]
ant-core = { path = "../ant-core" }
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
colored = "3.1.1"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
