[package]
name = "ant-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Node management
async-stream = "0.3"
axum = "0.8"
flate2 = "1"
fs2 = "0.4"
futures-core = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
utoipa = { version = "5", features = ["axum_extras"] }
zip = "2"
tower-http = { version = "0.6.8", features = ["cors"] }

# Data operations (from saorsa-client)
ant-evm = "0.1.19"
evmlib = "0.4.7"
xor_name = "5"
libp2p = "0.56"
multihash = "0.19"
self_encryption = "0.35.0"
futures = "0.3"
postcard = { version = "1.1.3", features = ["use-std"] }
rmp-serde = "1"
hex = "0.4"
tracing = "0.1"
bytes = "1"
lru = "0.16"
rand = "0.8"
saorsa-node = { git = "https://github.com/saorsa-labs/saorsa-node", branch = "merkle_payments" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
